Task2/src/main/java/ru/ifmo/PrefixParser.java
// Generated from Prefix.g4 by ANTLR 4.7
package ru.ifmo;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PrefixParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, Number=19, Bool=20, VarName=21, WS=22;
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_action = 2, RULE_conditional = 3, 
		RULE_ifExpr = 4, RULE_elseExpr = 5, RULE_assign = 6, RULE_print = 7, RULE_arithmeticExpr = 8, 
		RULE_logicExpr = 9;
	public static final String[] ruleNames = {
		"start", "program", "action", "conditional", "ifExpr", "elseExpr", "assign", 
		"print", "arithmeticExpr", "logicExpr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'if'", "'elif'", "'else'", "'='", "'print'", "'+'", "'-'", "'*'", 
		"'/'", "'and'", "'or'", "'not'", "'<'", "'>'", "'>='", "'<='", "'=='", 
		"'!='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "Number", "Bool", "VarName", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Prefix.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PrefixParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public String value;
		public ProgramContext p;
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			((StartContext)_localctx).p = program();
			((StartContext)_localctx).value =  String.format("begin%s\nend.", ((StartContext)_localctx).p.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public String value = "";
		public ActionContext act;
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__4))) != 0)) {
				{
				{
				setState(23);
				((ProgramContext)_localctx).act = action();
				_localctx.value += String.format("\n%s", ((ProgramContext)_localctx).act.value);
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public String value = "\t";
		public AssignContext a;
		public PrintContext p;
		public ConditionalContext e;
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public ConditionalContext conditional() {
			return getRuleContext(ConditionalContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).exitAction(this);
		}
	}

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_action);
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(31);
				((ActionContext)_localctx).a = assign();
				_localctx.value += ((ActionContext)_localctx).a.value;
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				((ActionContext)_localctx).p = print();
				_localctx.value += ((ActionContext)_localctx).p.value;
				}
				break;
			case T__0:
			case T__1:
				enterOuterAlt(_localctx, 3);
				{
				setState(37);
				((ActionContext)_localctx).e = conditional();
				_localctx.value += ((ActionContext)_localctx).e.value;
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionalContext extends ParserRuleContext {
		public String value;
		public IfExprContext i;
		public ElseExprContext e;
		public IfExprContext ifExpr() {
			return getRuleContext(IfExprContext.class,0);
		}
		public ElseExprContext elseExpr() {
			return getRuleContext(ElseExprContext.class,0);
		}
		public ConditionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).enterConditional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).exitConditional(this);
		}
	}

	public final ConditionalContext conditional() throws RecognitionException {
		ConditionalContext _localctx = new ConditionalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_conditional);
		try {
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				((ConditionalContext)_localctx).i = ifExpr();
				((ConditionalContext)_localctx).value =  ((ConditionalContext)_localctx).i.value;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(45);
				((ConditionalContext)_localctx).i = ifExpr();
				setState(46);
				((ConditionalContext)_localctx).e = elseExpr();
				((ConditionalContext)_localctx).value =  ((ConditionalContext)_localctx).i.value + "\n" + ((ConditionalContext)_localctx).e.value;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfExprContext extends ParserRuleContext {
		public String value;
		public LogicExprContext e;
		public ActionContext act;
		public LogicExprContext logicExpr() {
			return getRuleContext(LogicExprContext.class,0);
		}
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public IfExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).enterIfExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).exitIfExpr(this);
		}
	}

	public final IfExprContext ifExpr() throws RecognitionException {
		IfExprContext _localctx = new IfExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ifExpr);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				match(T__0);
				setState(52);
				((IfExprContext)_localctx).e = logicExpr();
				setState(53);
				((IfExprContext)_localctx).act = action();
				((IfExprContext)_localctx).value =  String.format("if (%s) then\n\t%s", ((IfExprContext)_localctx).e.value, ((IfExprContext)_localctx).act.value);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				match(T__1);
				setState(57);
				((IfExprContext)_localctx).e = logicExpr();
				setState(58);
				((IfExprContext)_localctx).act = action();
				((IfExprContext)_localctx).value =  String.format("else if (%s) then\n\t%s", ((IfExprContext)_localctx).e.value, ((IfExprContext)_localctx).act.value);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseExprContext extends ParserRuleContext {
		public String value;
		public ActionContext act;
		public ActionContext action() {
			return getRuleContext(ActionContext.class,0);
		}
		public ElseExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).enterElseExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).exitElseExpr(this);
		}
	}

	public final ElseExprContext elseExpr() throws RecognitionException {
		ElseExprContext _localctx = new ElseExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_elseExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(T__2);
			setState(64);
			((ElseExprContext)_localctx).act = action();
			((ElseExprContext)_localctx).value =  String.format("else then\n\t%s", ((ElseExprContext)_localctx).act.value);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public String value;
		public Token bVar;
		public LogicExprContext le;
		public Token var;
		public ArithmeticExprContext ae;
		public TerminalNode VarName() { return getToken(PrefixParser.VarName, 0); }
		public LogicExprContext logicExpr() {
			return getRuleContext(LogicExprContext.class,0);
		}
		public ArithmeticExprContext arithmeticExpr() {
			return getRuleContext(ArithmeticExprContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assign);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				match(T__3);
				setState(68);
				((AssignContext)_localctx).bVar = match(VarName);
				setState(69);
				((AssignContext)_localctx).le = logicExpr();
				((AssignContext)_localctx).value =  String.format("%s = %s;", (((AssignContext)_localctx).bVar!=null?((AssignContext)_localctx).bVar.getText():null), ((AssignContext)_localctx).le.value);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(T__3);
				setState(73);
				((AssignContext)_localctx).var = match(VarName);
				setState(74);
				((AssignContext)_localctx).ae = arithmeticExpr();
				((AssignContext)_localctx).value =  String.format("%s = %s;", (((AssignContext)_localctx).var!=null?((AssignContext)_localctx).var.getText():null), ((AssignContext)_localctx).ae.value);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintContext extends ParserRuleContext {
		public String value;
		public LogicExprContext le;
		public ArithmeticExprContext ae;
		public LogicExprContext logicExpr() {
			return getRuleContext(LogicExprContext.class,0);
		}
		public ArithmeticExprContext arithmeticExpr() {
			return getRuleContext(ArithmeticExprContext.class,0);
		}
		public PrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_print; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).enterPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).exitPrint(this);
		}
	}

	public final PrintContext print() throws RecognitionException {
		PrintContext _localctx = new PrintContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_print);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				match(T__4);
				setState(80);
				((PrintContext)_localctx).le = logicExpr();
				((PrintContext)_localctx).value =  String.format("writeln(%s);", ((PrintContext)_localctx).le.value);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				match(T__4);
				setState(84);
				((PrintContext)_localctx).ae = arithmeticExpr();
				((PrintContext)_localctx).value =  String.format("writeln(%s);", ((PrintContext)_localctx).ae.value);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithmeticExprContext extends ParserRuleContext {
		public String value;
		public ArithmeticExprContext e1;
		public ArithmeticExprContext e2;
		public Token n;
		public Token var;
		public List<ArithmeticExprContext> arithmeticExpr() {
			return getRuleContexts(ArithmeticExprContext.class);
		}
		public ArithmeticExprContext arithmeticExpr(int i) {
			return getRuleContext(ArithmeticExprContext.class,i);
		}
		public TerminalNode Number() { return getToken(PrefixParser.Number, 0); }
		public TerminalNode VarName() { return getToken(PrefixParser.VarName, 0); }
		public ArithmeticExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmeticExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).enterArithmeticExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).exitArithmeticExpr(this);
		}
	}

	public final ArithmeticExprContext arithmeticExpr() throws RecognitionException {
		ArithmeticExprContext _localctx = new ArithmeticExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_arithmeticExpr);
		try {
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__5:
			case T__6:
			case T__7:
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__5:
					{
					setState(89);
					match(T__5);
					setState(90);
					((ArithmeticExprContext)_localctx).e1 = arithmeticExpr();
					setState(91);
					((ArithmeticExprContext)_localctx).e2 = arithmeticExpr();
					((ArithmeticExprContext)_localctx).value =  String.format("(%s + %s)", ((ArithmeticExprContext)_localctx).e1.value, ((ArithmeticExprContext)_localctx).e2.value);
					}
					break;
				case T__6:
					{
					setState(94);
					match(T__6);
					setState(95);
					((ArithmeticExprContext)_localctx).e1 = arithmeticExpr();
					setState(96);
					((ArithmeticExprContext)_localctx).e2 = arithmeticExpr();
					((ArithmeticExprContext)_localctx).value =  String.format("(%s - %s)", ((ArithmeticExprContext)_localctx).e1.value, ((ArithmeticExprContext)_localctx).e2.value);
					}
					break;
				case T__7:
					{
					setState(99);
					match(T__7);
					setState(100);
					((ArithmeticExprContext)_localctx).e1 = arithmeticExpr();
					setState(101);
					((ArithmeticExprContext)_localctx).e2 = arithmeticExpr();
					((ArithmeticExprContext)_localctx).value =  String.format("%s * %s", ((ArithmeticExprContext)_localctx).e1.value, ((ArithmeticExprContext)_localctx).e2.value);
					}
					break;
				case T__8:
					{
					setState(104);
					match(T__8);
					setState(105);
					((ArithmeticExprContext)_localctx).e1 = arithmeticExpr();
					setState(106);
					((ArithmeticExprContext)_localctx).e2 = arithmeticExpr();
					((ArithmeticExprContext)_localctx).value =  String.format("(%s / %s)", ((ArithmeticExprContext)_localctx).e1.value, ((ArithmeticExprContext)_localctx).e2.value);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case Number:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				((ArithmeticExprContext)_localctx).n = match(Number);
				((ArithmeticExprContext)_localctx).value =  (((ArithmeticExprContext)_localctx).n!=null?((ArithmeticExprContext)_localctx).n.getText():null);
				}
				break;
			case VarName:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				((ArithmeticExprContext)_localctx).var = match(VarName);
				((ArithmeticExprContext)_localctx).value =  (((ArithmeticExprContext)_localctx).var!=null?((ArithmeticExprContext)_localctx).var.getText():null);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicExprContext extends ParserRuleContext {
		public String value;
		public LogicExprContext e1;
		public LogicExprContext e2;
		public LogicExprContext e;
		public Token b;
		public ArithmeticExprContext ae1;
		public ArithmeticExprContext ae2;
		public List<LogicExprContext> logicExpr() {
			return getRuleContexts(LogicExprContext.class);
		}
		public LogicExprContext logicExpr(int i) {
			return getRuleContext(LogicExprContext.class,i);
		}
		public TerminalNode Bool() { return getToken(PrefixParser.Bool, 0); }
		public TerminalNode VarName() { return getToken(PrefixParser.VarName, 0); }
		public List<ArithmeticExprContext> arithmeticExpr() {
			return getRuleContexts(ArithmeticExprContext.class);
		}
		public ArithmeticExprContext arithmeticExpr(int i) {
			return getRuleContext(ArithmeticExprContext.class,i);
		}
		public LogicExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).enterLogicExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PrefixListener ) ((PrefixListener)listener).exitLogicExpr(this);
		}
	}

	public final LogicExprContext logicExpr() throws RecognitionException {
		LogicExprContext _localctx = new LogicExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_logicExpr);
		try {
			setState(179);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__9:
			case T__10:
			case T__11:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__9:
					{
					setState(117);
					match(T__9);
					setState(118);
					((LogicExprContext)_localctx).e1 = logicExpr();
					setState(119);
					((LogicExprContext)_localctx).e2 = logicExpr();
					((LogicExprContext)_localctx).value =  String.format("%s and %s", ((LogicExprContext)_localctx).e1.value, ((LogicExprContext)_localctx).e2.value);
					}
					break;
				case T__10:
					{
					setState(122);
					match(T__10);
					setState(123);
					((LogicExprContext)_localctx).e1 = logicExpr();
					setState(124);
					((LogicExprContext)_localctx).e2 = logicExpr();
					((LogicExprContext)_localctx).value =  String.format("(%s or %s)", ((LogicExprContext)_localctx).e1.value, ((LogicExprContext)_localctx).e2.value);
					}
					break;
				case T__11:
					{
					setState(127);
					match(T__11);
					setState(128);
					((LogicExprContext)_localctx).e = logicExpr();
					((LogicExprContext)_localctx).value =  String.format("not %s", ((LogicExprContext)_localctx).e.value);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case Bool:
				enterOuterAlt(_localctx, 2);
				{
				setState(133);
				((LogicExprContext)_localctx).b = match(Bool);
				((LogicExprContext)_localctx).value =  (((LogicExprContext)_localctx).b!=null?((LogicExprContext)_localctx).b.getText():null);
				}
				break;
			case VarName:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				((LogicExprContext)_localctx).b = match(VarName);
				((LogicExprContext)_localctx).value =  (((LogicExprContext)_localctx).b!=null?((LogicExprContext)_localctx).b.getText():null);
				}
				break;
			case T__12:
			case T__13:
			case T__14:
			case T__15:
			case T__16:
			case T__17:
				enterOuterAlt(_localctx, 4);
				{
				setState(177);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
				case 1:
					{
					setState(137);
					match(T__12);
					setState(138);
					((LogicExprContext)_localctx).ae1 = arithmeticExpr();
					setState(139);
					((LogicExprContext)_localctx).ae2 = arithmeticExpr();
					((LogicExprContext)_localctx).value =  String.format("%s < %s", ((LogicExprContext)_localctx).ae1.value, ((LogicExprContext)_localctx).ae2.value);
					}
					break;
				case 2:
					{
					setState(142);
					match(T__13);
					setState(143);
					((LogicExprContext)_localctx).ae1 = arithmeticExpr();
					setState(144);
					((LogicExprContext)_localctx).ae2 = arithmeticExpr();
					((LogicExprContext)_localctx).value =  String.format("%s > %s", ((LogicExprContext)_localctx).ae1.value, ((LogicExprContext)_localctx).ae2.value);
					}
					break;
				case 3:
					{
					setState(147);
					match(T__14);
					setState(148);
					((LogicExprContext)_localctx).ae1 = arithmeticExpr();
					setState(149);
					((LogicExprContext)_localctx).ae2 = arithmeticExpr();
					((LogicExprContext)_localctx).value =  String.format("%s >= %s", ((LogicExprContext)_localctx).ae1.value, ((LogicExprContext)_localctx).ae2.value);
					}
					break;
				case 4:
					{
					setState(152);
					match(T__15);
					setState(153);
					((LogicExprContext)_localctx).ae1 = arithmeticExpr();
					setState(154);
					((LogicExprContext)_localctx).ae2 = arithmeticExpr();
					((LogicExprContext)_localctx).value =  String.format("%s <= %s", ((LogicExprContext)_localctx).ae1.value, ((LogicExprContext)_localctx).ae2.value);
					}
					break;
				case 5:
					{
					setState(157);
					match(T__16);
					setState(158);
					((LogicExprContext)_localctx).ae1 = arithmeticExpr();
					setState(159);
					((LogicExprContext)_localctx).ae2 = arithmeticExpr();
					((LogicExprContext)_localctx).value =  String.format("%s == %s", ((LogicExprContext)_localctx).ae1.value, ((LogicExprContext)_localctx).ae2.value);
					}
					break;
				case 6:
					{
					setState(162);
					match(T__16);
					setState(163);
					((LogicExprContext)_localctx).e1 = logicExpr();
					setState(164);
					((LogicExprContext)_localctx).e2 = logicExpr();
					((LogicExprContext)_localctx).value =  String.format("%s == %s", ((LogicExprContext)_localctx).e1.value, ((LogicExprContext)_localctx).e2.value);
					}
					break;
				case 7:
					{
					setState(167);
					match(T__17);
					setState(168);
					((LogicExprContext)_localctx).ae1 = arithmeticExpr();
					setState(169);
					((LogicExprContext)_localctx).ae2 = arithmeticExpr();
					((LogicExprContext)_localctx).value =  String.format("%s != %s", ((LogicExprContext)_localctx).ae1.value, ((LogicExprContext)_localctx).ae2.value);
					}
					break;
				case 8:
					{
					setState(172);
					match(T__17);
					setState(173);
					((LogicExprContext)_localctx).e1 = logicExpr();
					setState(174);
					((LogicExprContext)_localctx).e2 = logicExpr();
					((LogicExprContext)_localctx).value =  String.format("%s != %s", ((LogicExprContext)_localctx).e1.value, ((LogicExprContext)_localctx).e2.value);
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}